# codesys-mcp-python

./: README.md  pyproject.toml
mcp_codesys/: __init__.py  cli.py  codesys_interop.py  server.py
tools/: extract_docx.py  generate_mcp_config.py
